tests/security/taintThroughTemplatedProperty/output.txt
ERROR: TaintedData - input.hack:23:10 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:18:25) ----> ResultOk::__construct#1 (input.hack:9:40) ----> $t (input.hack:9:40) ----> $this->t (input.hack:9:40) --property-assignment--> $this (input.hack:9:40) ----> $this in ResultOk after __construct (input.hack:9:18) ----> return (input.hack:18:12) ----> call to returnGetResult (input.hack:17:29) ----> $res (input.hack:22:5) ----> $this in Result before orNull (input.hack:2:18) --refine-symbol--> $this narrowed to ResultOk (input.hack:3:10) ----> $this in ResultOk before get (input.hack:12:18) ----> $this (input.hack:13:10) --property-fetch--> $this->t (input.hack:13:17) ----> return (input.hack:13:10) ----> call to ResultOk::get (input.hack:12:25) ----> return (input.hack:3:10) ----> call to Result::orNull (input.hack:2:28) ----> echo#1 (input.hack:23:10)